"ADD --- Se resolvieron las Kata4 y Kata5"