@@ -8,6 +8,7 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Retrieve id, title, and a 150x200 box art url for every video
@@ -18,6 +19,19 @@ public class Kata4 {
     public static List<Map> execute() {
         List<MovieList> movieLists = DataUtil.getMovieLists();
 
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", new BoxArt(150, 200, "url")));
+        return movieLists.stream()
+                .flatMap(e -> e.getVideos().stream())
+                .map(el -> Map.of("id", el.getId(),
+                        "title", el.getTitle(),
+                        "url", el.getBoxarts()
+                                .stream()
+                                .filter(box -> box.getWidth() ==150 && box.getHeight()==200)
+                                .findAny().get().getUrl()))
+                .collect(Collectors.toList());
+
+
+
+
+//        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", new BoxArt(150, 200, "url")));
     }
 }
